# designpatterns

./: CMakeLists.txt  LICENSE
day_1/: CMakeLists.txt
day_1/include/: Addtion.hpp  Calculator.hpp  GPS.hpp  Operation.hpp  Power.hpp  Stack.hpp
day_1/src/: Addtion.cpp  Calculator.cpp  GPS.cpp  Power.cpp  Stack.cpp  adapter_demo.cpp  car_builder.cpp  decorator.cpp  main.cpp
day_2/: CMakeLists.txt
day_2/Abstract Factory/: CMakeLists.txt  PizzaTestDrive.cpp
day_2/Abstract Factory/pizza/: CheesePizza.h  ClamPizza.h  MeatPizza.h  PepperoniPizza.h  Pizza.h  VeggiePizza.h
day_2/Abstract Factory/pizzastore/: ChicagoPizzaStore.h  MunichPizzaStore.h  NYPizzaStore.h  PizzaStore.h
day_2/Abstract Factory/toppingfactory/: ChicagoPizzaToppingFactory.h  MunichPizzaToppingFactory.h  NYPizzaToppingFactory.h  PizzaToppingFactory.h
day_2/Abstract Factory/toppings/meat/: Chicken.h  Ham.h  Meat.h  Weisswurst.h
day_2/State/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.hpp  state_incomplete.cpp
day_2/State/state/: Inactive.cpp  Inactive.hpp  On.cpp  On.hpp  Paused.cpp  Paused.hpp  Playing.cpp  Playing.hpp  State.hpp
day_2/Strategy/: CMakeLists.txt  Client.cpp  Context.h  MergeSort.h  Policy.h  QuickSort.h  SortStrategy.h  StdSort.h
day_3/: CMakeLists.txt
day_3/Observer/: CMakeLists.txt  main.cpp  observer_counterexample.py  observer_example.py  stockmanager_observer.cpp  stockmanager_observer.hpp  stockmanager_products_with_observer.cpp  stockmanager_products_with_observer.hpp  stockmanger_withoutObserver.cpp  stockmanger_withoutObserver.hpp
day_3/Observer/streaming_platform/: Channel.cpp  Channel.hpp  ChannelNotification.hpp  StreamingPlatform.cpp  StreamingPlatform.hpp  SubScriber.cpp  SubScriber.hpp  Video.hpp
